// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nature-ui/input Elements inside input render correctly 1`] = `
<DocumentFragment>
  <span
    class=" flex "
  >
    <span
      class="px-4 flex w-auto items-center whitespace-no-wrap bg-gray-100 border border-gray-200 rounded-l css-1ri2j3w css-1btbaz3"
    >
      <span>
        Hello
      </span>
    </span>
    <input
      class="duration-150 rounded-l-none rounded-r-none w-full outline-none transition-all border border-solid border-gray-200 focus:border-blue-600 rounded css-1dp2wsc css-q6n4wc css-1ri2j3w"
    />
    <span
      class="px-4 flex w-auto items-center whitespace-no-wrap bg-gray-100 border border-gray-200 rounded-r css-1ri2j3w css-hsw7ky"
    >
      <span>
        Hello
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`@nature-ui/input Input addons render correctly 1`] = `
<DocumentFragment>
  <span
    class=" flex "
  >
    <span
      class="px-4 flex w-auto items-center whitespace-no-wrap bg-gray-100 border border-gray-200 rounded-l css-1ri2j3w css-1btbaz3"
    >
      https://
    </span>
    <input
      class="duration-150 rounded-l-none rounded-r-none w-full outline-none transition-all border border-solid border-gray-200 focus:border-blue-600 rounded css-1dp2wsc css-q6n4wc css-1ri2j3w"
    />
    <span
      class="px-4 flex w-auto items-center whitespace-no-wrap bg-gray-100 border border-gray-200 rounded-r css-1ri2j3w css-hsw7ky"
    >
      .com
    </span>
  </span>
</DocumentFragment>
`;

exports[`@nature-ui/input Input renders correctly 1`] = `
<DocumentFragment>
  <input
    class="duration-150 w-full outline-none transition-all border border-solid border-gray-200 focus:border-blue-600 rounded css-1dp2wsc css-q6n4wc css-1ri2j3w"
  />
</DocumentFragment>
`;
